# pedestrian-action-anticipation-vjepa

./: .gitignore  README.md  bytetrack.cpp  bytetrack.hpp  pyproject.toml  requirements.txt  video_inference.py
configs/eval/vitl/: jaad.yaml  pie.yaml
configs/inference/vitl/: jaad.yaml  pie.yaml
evals/: main.py  scaffold.py
evals/action_anticipation_frozen/: dataloader.py  eval_all.py  eval_cross_only.py  jaad.py  losses.py  metrics.py  models_2.py  models_cross_only.py  pie.py  utils.py
evals/action_anticipation_frozen/modelcustom/: vit_encoder_predictor_concat_ar.py
evals/hub/: preprocessor.py
py_app/: cli.py  main.py
py_app/core/: config.py  datatypes.py  depth_utils.py  geometry.py  pipeline.py  risk.py  streaming_anticipation_engine.py  utils.py
py_app/runners/: base_runner.py  depth_runner.py  factory.py  onnx_runner.py  pytorch_runner.py  tensorrt_runner.py
py_app/tracking/: bbox_csv.py  tracking_node.py  yolo_tracker.py
py_app/visualization/: bev.py  overlay.py  visualization_node.py
ros2_ws/: test_image_publisher.py
ros2_ws/src/pedestrian_anticipation_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/pedestrian_anticipation_cpp/config/: anticipation.yaml
ros2_ws/src/pedestrian_anticipation_cpp/include/pedestrian_anticipation_cpp/: anticipation_runner_base.hpp  onnx_anticipation_runner.hpp  runner_factory.hpp  tensorrt_anticipation_runner.hpp
ros2_ws/src/pedestrian_anticipation_cpp/src/: anticipation_node.cpp  onnx_anticipation_runner.cpp  tensorrt_anticipation_runner.cpp
ros2_ws/src/pedestrian_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/pedestrian_interfaces/msg/: PedestrianPrediction.msg  PedestrianPredictionArray.msg  TrackedPedestrian.msg  TrackedPedestrianArray.msg
ros2_ws/src/pedestrian_tracker_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/pedestrian_tracker_cpp/config/: tracker.yaml
ros2_ws/src/pedestrian_tracker_cpp/include/pedestrian_tracker_cpp/: bytetrack.hpp  detector_runner_base.hpp  detector_runner_factory.hpp  onnx_detector.hpp  tensorrt_detector.hpp
ros2_ws/src/pedestrian_tracker_cpp/src/: bytetrack.cpp  onnx_detector.cpp  tensorrt_detector.cpp  tracker_node.cpp
ros2_ws/src/pedestrian_visualizer_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/pedestrian_visualizer_cpp/config/: visualizer.yaml
ros2_ws/src/pedestrian_visualizer_cpp/include/pedestrian_visualizer_cpp/: bev.hpp  overlay.hpp  types.hpp
ros2_ws/src/pedestrian_visualizer_cpp/src/: bev.cpp  overlay.cpp  visualizer_node.cpp
src/datasets/: data_manager.py  imagenet1k.py  video_dataset.py
src/datasets/utils/: dataloader.py  utils.py  weighted_sampler.py  worker_init_fn.py
src/datasets/utils/video/: functional.py  randaugment.py  randerase.py  transforms.py  transforms_builder.py  volume_transforms.py
src/hub/: backbones.py
src/masks/: default.py  multiseq_multiblock3d.py  utils.py
src/models/: attentive_pooler.py  predictor.py  vision_transformer.py
src/models/utils/: modules.py  patch_embed.py  pos_embs.py
src/utils/: checkpoint_loader.py  distributed.py  logging.py  monitoring.py  schedulers.py  tensors.py  wrappers.py
your_data/: JAAD_test_all.csv  JAAD_train_all.csv  JAAD_val_all.csv  PIE_framewise_bboxes_mini.csv  PIE_test.csv  PIE_test_mini.csv  PIE_train.csv  PIE_val.csv
